tasky-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:442042553076:certificate/d70462ed-3627-4ce3-9e60-892366f1f712
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
spec:
  type: LoadBalancer
  ports:
    - port: 443         
      targetPort: 8080   
      protocol: TCP
  selector:
    app: tasky
